# configit

./: Cargo.toml  README.md
src/: configuration.rs  error.rs  kind.rs  lib.rs
