[package]
name = "configit"
version = "0.1.0"
edition = "2021"
authors = ["ltoddy <taoliu0509@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Zero-boilerplate configuration management in Rust"
repository = "https://github.com/ltoddy/configit"
homepage = "https://github.com/ltoddy/configit"

[dependencies]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
