[package]
name = "configit"
version = "0.1.3"
edition = "2021"
authors = ["ltoddy <taoliu0509@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Zero-boilerplate configuration management in Rust"
repository = "https://github.com/ltoddy/configit"
homepage = "https://github.com/ltoddy/configit"
documentation = "https://docs.rs/configit"

[features]
default = ["toml_conf"]
toml_conf = ["toml"]
yaml_conf = ["serde_yaml"]

[dependencies]
serde = "1"
serde_yaml = { version = "0.8", optional = true }
thiserror = "1"
toml = { version = "0.5", optional = true }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
